parser/yobuffer_parser.go
// Code generated from Yobuffer.g4 by ANTLR 4.13.0. DO NOT EDIT.

package parser // Yobuffer
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type YobufferParser struct {
	*antlr.BaseParser
}

var YobufferParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func yobufferParserInit() {
	staticData := &YobufferParserStaticData
	staticData.LiteralNames = []string{
		"", "'meta'", "'import'", "'package'", "'int8'", "'int16'", "'int32'",
		"'int64'", "'uint8'", "'uint16'", "'uint32'", "'uint64'", "'bool'",
		"'string'", "'float32'", "'float64'", "'bytes'", "'message'", "'service'",
		"'rpc'", "'stream'", "'struct'", "'void'", "'@'", "';'", "'='", "'('",
		"')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'.'", "','", "':'",
		"'+'", "'-'",
	}
	staticData.SymbolicNames = []string{
		"", "META", "IMPORT", "PACKAGE", "INT8", "INT16", "INT32", "INT64",
		"UINT8", "UINT16", "UINT32", "UINT64", "BOOL", "STRING", "FLOAT32",
		"FLOAT64", "BYTES", "MESSAGE", "SERVICE", "RPC", "STREAM", "STRUCT",
		"VOID", "AT", "END", "EQ", "LP", "RP", "LB", "RB", "LC", "RC", "LT",
		"GT", "DOT", "COMMA", "COLON", "PLUS", "MINUS", "STRING_VALUE", "BOOL_VALUE",
		"FLOAT_VALUE", "INT_VALUE", "IDENTIFIER", "WHITESPACE", "COMMENT",
	}
	staticData.RuleNames = []string{
		"schema", "packageStmt", "importStmt", "meta", "metaName", "metaElement",
		"field", "fieldName", "fieldTag", "fieldType", "message", "messageName",
		"messageElement", "messageType", "struct", "structName", "structElement",
		"service", "serviceName", "serviceElement", "rpc", "rpcName", "constant",
		"emptyStmt", "ident", "fullIdent", "keywords",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// YobufferParserInit initializes any static state used to implement YobufferParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewYobufferParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func YobufferParserInit() {
	staticData := &YobufferParserStaticData
	staticData.once.Do(yobufferParserInit)
}

// NewYobufferParser produces a new parser instance for the optional input antlr.TokenStream.
func NewYobufferParser(input antlr.TokenStream) *YobufferParser {
	YobufferParserInit()
	this := new(YobufferParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &YobufferParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Yobuffer.g4"

	return this
}

// YobufferParser tokens.
const (
	YobufferParserEOF          = antlr.TokenEOF
	YobufferParserMETA         = 1
	YobufferParserIMPORT       = 2
	YobufferParserPACKAGE      = 3
	YobufferParserINT8         = 4
	YobufferParserINT16        = 5
	YobufferParserINT32        = 6
	YobufferParserINT64        = 7
	YobufferParserUINT8        = 8
	YobufferParserUINT16       = 9
	YobufferParserUINT32       = 10
	YobufferParserUINT64       = 11
	YobufferParserBOOL         = 12
	YobufferParserSTRING       = 13
	YobufferParserFLOAT32      = 14
	YobufferParserFLOAT64      = 15
	YobufferParserBYTES        = 16
	YobufferParserMESSAGE      = 17
	YobufferParserSERVICE      = 18
	YobufferParserRPC          = 19
	YobufferParserSTREAM       = 20
	YobufferParserSTRUCT       = 21
	YobufferParserVOID         = 22
	YobufferParserAT           = 23
	YobufferParserEND          = 24
	YobufferParserEQ           = 25
	YobufferParserLP           = 26
	YobufferParserRP           = 27
	YobufferParserLB           = 28
	YobufferParserRB           = 29
	YobufferParserLC           = 30
	YobufferParserRC           = 31
	YobufferParserLT           = 32
	YobufferParserGT           = 33
	YobufferParserDOT          = 34
	YobufferParserCOMMA        = 35
	YobufferParserCOLON        = 36
	YobufferParserPLUS         = 37
	YobufferParserMINUS        = 38
	YobufferParserSTRING_VALUE = 39
	YobufferParserBOOL_VALUE   = 40
	YobufferParserFLOAT_VALUE  = 41
	YobufferParserINT_VALUE    = 42
	YobufferParserIDENTIFIER   = 43
	YobufferParserWHITESPACE   = 44
	YobufferParserCOMMENT      = 45
)

// YobufferParser rules.
const (
	YobufferParserRULE_schema         = 0
	YobufferParserRULE_packageStmt    = 1
	YobufferParserRULE_importStmt     = 2
	YobufferParserRULE_meta           = 3
	YobufferParserRULE_metaName       = 4
	YobufferParserRULE_metaElement    = 5
	YobufferParserRULE_field          = 6
	YobufferParserRULE_fieldName      = 7
	YobufferParserRULE_fieldTag       = 8
	YobufferParserRULE_fieldType      = 9
	YobufferParserRULE_message        = 10
	YobufferParserRULE_messageName    = 11
	YobufferParserRULE_messageElement = 12
	YobufferParserRULE_messageType    = 13
	YobufferParserRULE_struct         = 14
	YobufferParserRULE_structName     = 15
	YobufferParserRULE_structElement  = 16
	YobufferParserRULE_service        = 17
	YobufferParserRULE_serviceName    = 18
	YobufferParserRULE_serviceElement = 19
	YobufferParserRULE_rpc            = 20
	YobufferParserRULE_rpcName        = 21
	YobufferParserRULE_constant       = 22
	YobufferParserRULE_emptyStmt      = 23
	YobufferParserRULE_ident          = 24
	YobufferParserRULE_fullIdent      = 25
	YobufferParserRULE_keywords       = 26
)

// ISchemaContext is an interface to support dynamic dispatch.
type ISchemaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PackageStmt() IPackageStmtContext
	AllImportStmt() []IImportStmtContext
	ImportStmt(i int) IImportStmtContext
	AllMeta() []IMetaContext
	Meta(i int) IMetaContext
	AllMessage() []IMessageContext
	Message(i int) IMessageContext
	AllService() []IServiceContext
	Service(i int) IServiceContext

	// IsSchemaContext differentiates from other interfaces.
	IsSchemaContext()
}

type SchemaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySchemaContext() *SchemaContext {
	var p = new(SchemaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_schema
	return p
}

func InitEmptySchemaContext(p *SchemaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_schema
}

func (*SchemaContext) IsSchemaContext() {}

func NewSchemaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SchemaContext {
	var p = new(SchemaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = YobufferParserRULE_schema

	return p
}

func (s *SchemaContext) GetParser() antlr.Parser { return s.parser }

func (s *SchemaContext) PackageStmt() IPackageStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageStmtContext)
}

func (s *SchemaContext) AllImportStmt() []IImportStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IImportStmtContext); ok {
			len++
		}
	}

	tst := make([]IImportStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IImportStmtContext); ok {
			tst[i] = t.(IImportStmtContext)
			i++
		}
	}

	return tst
}

func (s *SchemaContext) ImportStmt(i int) IImportStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IImportStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IImportStmtContext)
}

func (s *SchemaContext) AllMeta() []IMetaContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMetaContext); ok {
			len++
		}
	}

	tst := make([]IMetaContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMetaContext); ok {
			tst[i] = t.(IMetaContext)
			i++
		}
	}

	return tst
}

func (s *SchemaContext) Meta(i int) IMetaContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetaContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetaContext)
}

func (s *SchemaContext) AllMessage() []IMessageContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMessageContext); ok {
			len++
		}
	}

	tst := make([]IMessageContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMessageContext); ok {
			tst[i] = t.(IMessageContext)
			i++
		}
	}

	return tst
}

func (s *SchemaContext) Message(i int) IMessageContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMessageContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMessageContext)
}

func (s *SchemaContext) AllService() []IServiceContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IServiceContext); ok {
			len++
		}
	}

	tst := make([]IServiceContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IServiceContext); ok {
			tst[i] = t.(IServiceContext)
			i++
		}
	}

	return tst
}

func (s *SchemaContext) Service(i int) IServiceContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IServiceContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IServiceContext)
}

func (s *SchemaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SchemaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SchemaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YobufferListener); ok {
		listenerT.EnterSchema(s)
	}
}

func (s *SchemaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YobufferListener); ok {
		listenerT.ExitSchema(s)
	}
}

func (s *SchemaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case YobufferVisitor:
		return t.VisitSchema(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *YobufferParser) Schema() (localctx ISchemaContext) {
	localctx = NewSchemaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, YobufferParserRULE_schema)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == YobufferParserPACKAGE {
		{
			p.SetState(54)
			p.PackageStmt()
		}

	}
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&8781828) != 0 {
		p.SetState(61)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case YobufferParserIMPORT:
			{
				p.SetState(57)
				p.ImportStmt()
			}

		case YobufferParserAT:
			{
				p.SetState(58)
				p.Meta()
			}

		case YobufferParserMESSAGE:
			{
				p.SetState(59)
				p.Message()
			}

		case YobufferParserSERVICE:
			{
				p.SetState(60)
				p.Service()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(65)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPackageStmtContext is an interface to support dynamic dispatch.
type IPackageStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PACKAGE() antlr.TerminalNode
	FullIdent() IFullIdentContext
	END() antlr.TerminalNode

	// IsPackageStmtContext differentiates from other interfaces.
	IsPackageStmtContext()
}

type PackageStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageStmtContext() *PackageStmtContext {
	var p = new(PackageStmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_packageStmt
	return p
}

func InitEmptyPackageStmtContext(p *PackageStmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_packageStmt
}

func (*PackageStmtContext) IsPackageStmtContext() {}

func NewPackageStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageStmtContext {
	var p = new(PackageStmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = YobufferParserRULE_packageStmt

	return p
}

func (s *PackageStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageStmtContext) PACKAGE() antlr.TerminalNode {
	return s.GetToken(YobufferParserPACKAGE, 0)
}

func (s *PackageStmtContext) FullIdent() IFullIdentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFullIdentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFullIdentContext)
}

func (s *PackageStmtContext) END() antlr.TerminalNode {
	return s.GetToken(YobufferParserEND, 0)
}

func (s *PackageStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YobufferListener); ok {
		listenerT.EnterPackageStmt(s)
	}
}

func (s *PackageStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YobufferListener); ok {
		listenerT.ExitPackageStmt(s)
	}
}

func (s *PackageStmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case YobufferVisitor:
		return t.VisitPackageStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *YobufferParser) PackageStmt() (localctx IPackageStmtContext) {
	localctx = NewPackageStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, YobufferParserRULE_packageStmt)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(66)
		p.Match(YobufferParserPACKAGE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(67)
		p.FullIdent()
	}
	{
		p.SetState(68)
		p.Match(YobufferParserEND)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IImportStmtContext is an interface to support dynamic dispatch.
type IImportStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IMPORT() antlr.TerminalNode
	STRING_VALUE() antlr.TerminalNode
	END() antlr.TerminalNode

	// IsImportStmtContext differentiates from other interfaces.
	IsImportStmtContext()
}

type ImportStmtContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportStmtContext() *ImportStmtContext {
	var p = new(ImportStmtContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_importStmt
	return p
}

func InitEmptyImportStmtContext(p *ImportStmtContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_importStmt
}

func (*ImportStmtContext) IsImportStmtContext() {}

func NewImportStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportStmtContext {
	var p = new(ImportStmtContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = YobufferParserRULE_importStmt

	return p
}

func (s *ImportStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportStmtContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(YobufferParserIMPORT, 0)
}

func (s *ImportStmtContext) STRING_VALUE() antlr.TerminalNode {
	return s.GetToken(YobufferParserSTRING_VALUE, 0)
}

func (s *ImportStmtContext) END() antlr.TerminalNode {
	return s.GetToken(YobufferParserEND, 0)
}

func (s *ImportStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YobufferListener); ok {
		listenerT.EnterImportStmt(s)
	}
}

func (s *ImportStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YobufferListener); ok {
		listenerT.ExitImportStmt(s)
	}
}

func (s *ImportStmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case YobufferVisitor:
		return t.VisitImportStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *YobufferParser) ImportStmt() (localctx IImportStmtContext) {
	localctx = NewImportStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, YobufferParserRULE_importStmt)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Match(YobufferParserIMPORT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(71)
		p.Match(YobufferParserSTRING_VALUE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(72)
		p.Match(YobufferParserEND)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMetaContext is an interface to support dynamic dispatch.
type IMetaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AT() antlr.TerminalNode
	META() antlr.TerminalNode
	LC() antlr.TerminalNode
	RC() antlr.TerminalNode
	END() antlr.TerminalNode
	AllMetaElement() []IMetaElementContext
	MetaElement(i int) IMetaElementContext

	// IsMetaContext differentiates from other interfaces.
	IsMetaContext()
}

type MetaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMetaContext() *MetaContext {
	var p = new(MetaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_meta
	return p
}

func InitEmptyMetaContext(p *MetaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_meta
}

func (*MetaContext) IsMetaContext() {}

func NewMetaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MetaContext {
	var p = new(MetaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = YobufferParserRULE_meta

	return p
}

func (s *MetaContext) GetParser() antlr.Parser { return s.parser }

func (s *MetaContext) AT() antlr.TerminalNode {
	return s.GetToken(YobufferParserAT, 0)
}

func (s *MetaContext) META() antlr.TerminalNode {
	return s.GetToken(YobufferParserMETA, 0)
}

func (s *MetaContext) LC() antlr.TerminalNode {
	return s.GetToken(YobufferParserLC, 0)
}

func (s *MetaContext) RC() antlr.TerminalNode {
	return s.GetToken(YobufferParserRC, 0)
}

func (s *MetaContext) END() antlr.TerminalNode {
	return s.GetToken(YobufferParserEND, 0)
}

func (s *MetaContext) AllMetaElement() []IMetaElementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMetaElementContext); ok {
			len++
		}
	}

	tst := make([]IMetaElementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMetaElementContext); ok {
			tst[i] = t.(IMetaElementContext)
			i++
		}
	}

	return tst
}

func (s *MetaContext) MetaElement(i int) IMetaElementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetaElementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetaElementContext)
}

func (s *MetaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MetaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MetaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YobufferListener); ok {
		listenerT.EnterMeta(s)
	}
}

func (s *MetaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YobufferListener); ok {
		listenerT.ExitMeta(s)
	}
}

func (s *MetaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case YobufferVisitor:
		return t.VisitMeta(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *YobufferParser) Meta() (localctx IMetaContext) {
	localctx = NewMetaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, YobufferParserRULE_meta)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(74)
		p.Match(YobufferParserAT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(75)
		p.Match(YobufferParserMETA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(76)
		p.Match(YobufferParserLC)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&8796098265084) != 0 {
		{
			p.SetState(77)
			p.MetaElement()
		}

		p.SetState(82)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(83)
		p.Match(YobufferParserRC)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(84)
		p.Match(YobufferParserEND)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMetaNameContext is an interface to support dynamic dispatch.
type IMetaNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Ident() IIdentContext

	// IsMetaNameContext differentiates from other interfaces.
	IsMetaNameContext()
}

type MetaNameContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMetaNameContext() *MetaNameContext {
	var p = new(MetaNameContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_metaName
	return p
}

func InitEmptyMetaNameContext(p *MetaNameContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = YobufferParserRULE_metaName
}

func (*MetaNameContext) IsMetaNameContext() {}
